# crdb

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  get_valid_names.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: github-actions.yml  publish.yml  test.yml
docs/: build.py  conf.py  index.rst  installation.rst  reference.rst  usage.rst
docs/reference/: crdb.rst  index.rst
src/crdb/: __init__.py  __main__.py  _lib.py  cli.py  core.py  experimental.py  mpl.py  units.py
tests/: test_all.py  test_cli.py  test_core.py  test_crdb.py  test_elements.py  test_experimental.py  test_lib.py  test_mpl.py  test_query.py  test_solar_system_composition.py
