[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "crdb"
description = "CRDB Python frontend"
maintainers = [
    { name = "Hans Dembinski" },
    { email = "hans.dembinski@gmail.com" }
]
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Utilities',
]
dependencies = ["numpy", "cachier"]
dynamic = ["version"]

[project.urls]
repository = 'https://github.com/crdb-project/crdb'
documentation = 'https://lpsc.in2p3.fr/crdb'

[project.scripts]
crdb = "crdb.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "matplotlib",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "ipython",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
files = ["src"]
plugins = "numpy.typing.mypy_plugin"
pretty = true
no_implicit_optional = false

[tool.black]
target-version = ['py38']
skip-string-normalization = true

[tool.ruff]
select = ["E", "F", "D"]
extend-ignore = ["D203", "D212"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"test_*.py" = ["B", "D"]
"docs/*.py" = ["D"]
"setup.py" = ["D"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-config --strict-markers --doctest-modules -q -ra --ff --tb=short"
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = [
    "error::DeprecationWarning",
    "error::numpy.VisibleDeprecationWarning",
]

[tool.coverage.run]
relative_files = true
source = ["pyhepmc"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.pydocstyle]
convention = "numpy"
